# accent-speaker-disentanglement

./: .coverage  .gitignore  ANALYSIS_AND_IMPROVEMENTS.md  CHANGELOG.md  GATE_1_5.md  PRD.md  README.md  STAGE1_5_REVISION.md  VALIDATE_GATE_1_5.md  backbone_FIXED.py  coraa.md  huggingface_FIXED.py  logs.txt  pyproject.toml
config/: stage1_5.yaml
data/: manifest.example.jsonl  manifest.jsonl
docs/: dataset_guidelines.md  datasets.md
notebooks/: COLAB_QUICKSTART.md  stage1_5_colab.ipynb  stage1_5_colab_L4.ipynb  stage1_5_coraa_mupe.ipynb
stage1_5/: __init__.py  cli.py
stage1_5/analysis/: __init__.py  cka.py  rsa.py  visualization.py
stage1_5/backbone/: __init__.py  base.py  huggingface.py
stage1_5/data/: __init__.py  dataset_builder.py  manifest.py  splits.py  synthetic.py
stage1_5/features/: __init__.py  acoustic.py  backbone.py  cli.py  ecapa.py  pooling.py  ssl.py  storage.py
stage1_5/pipelines/: run_all.py
stage1_5/probes/: __init__.py  dataset.py  trainer.py
stage1_5/reporting/: __init__.py  writer.py
stage1_5/reporting/templates/: stage1_5_report_template.md
stage1_5/utils/: __init__.py  io.py  logging.py
tests/: test_backbone_extractor.py  test_dataset_builder.py  test_feature_store.py  test_manifest.py  test_pipeline_decision.py  test_pipeline_run_all.py  test_probe_runner.py
